# bridget-ui

./: .gitattributes  .gitmodules  LICENSE  README.md  elm.json
backend/: .dockerignore  .gitignore  BUILD.bazel  CHANGELOG.md  Dockerfile  LICENSE  WORKSPACE.bazel  bridget-ui-backend.cabal  stackage_snapshot.json
backend/app/: Main.hs
compose/dev/: dev-backend.Dockerfile  dev-frontend.Dockerfile  docker-compose.yml  nixpkgs.nix  shell.nix
compose/prod/: bridget_backend.tar  docker-compose.yml
frontend/: Dockerfile  elm.json
frontend/src/: BridgetPage.elm  Constants.elm  Main.elm  Rotations.elm  Types.elm  Update.elm  UpdatePieceRotation.elm  Utils.elm  View.elm
src/: Main.elm  Pieces.elm
