load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

java_deps = [
    "@maven//:org_reflections_reflections_0_10_2",
    "@maven//:org_apache_commons_commons_collections4_4_1",
    "@maven//:org_slf4j_slf4j_simple_2_0_17"
    ]

java_binary(
    name = "jar",
    main_class = "dummybridget.Main",
    srcs = glob(["wodsBridget/src/bridget/*.java"]),
    runtime_deps = java_deps,
)

haskell_binary(
    name = "bridget_backend",
    srcs = ['app/Main.hs'],
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-threaded",
    ],
    deps = [
        "@rules_haskell//tools/runfiles",
        "@inline-java//jvm",
        "@inline-java//jni",
        "@inline-java//:inline-java",
        "@stackage//:base",
        "@stackage//:text",
    ] + java_deps,
    data = [
        ":jar_deploy.jar",
    ],
    plugins = ["@inline-java//:inline-java-plugin"],
)