load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_binary",
)

java_library(
    name = "wods_bridget_java",
    srcs = glob(["wodsBridget/src/**/*.java"]),
)


java_deps = [
    "wods_bridget_java",
    "@maven//:org_reflections_reflections_0_10_2",
    "@maven//:org_apache_commons_commons_collections4_4_1",
    "@maven//:org_slf4j_slf4j_simple_2_0_17"
    ]

java_binary(
    name = "jar",
    main_class = "brgt.Main",
    runtime_deps = java_deps,
)

haskell_binary(
    name = "bridget_backend",
    srcs = ['app/Main.hs'],
    extra_srcs = ["@openjdk//:rpath"],
    compiler_flags = [
        "-optl-Wl,@$(location @openjdk//:rpath)",
        "-threaded",
    ],
    deps = [
        "@rules_haskell//tools/runfiles",
        "@inline-java//jvm",
        "@inline-java//jni",
        "@inline-java//:inline-java",
        "@stackage//:base",
        "@stackage//:text",
        "@stackage//:scotty",      #web server
        "@stackage//:wai-cors",
        "@stackage//:aeson",       #json
        "@stackage//:linear-base", #linear types
    ] + java_deps,
    data = [
        ":jar_deploy.jar",
    ],
    plugins = ["@inline-java//:inline-java-plugin"],
)