cabal-version:      3.0
name:               bridget-ui-backend
version:            0.1.0.0
synopsis:
    Acts as a bridge between the frontend written in elm and the bridget implementation written in java.

-- description:
license:            MIT
license-file:       LICENSE
author:             MNG
-- maintainer:
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bridget-ui-backend
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
